--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,12 @@
     <groupId>org.example</groupId>
     <artifactId>codingassessment</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <properties>
+        <start-class>mars.MarsApplication</start-class>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -20,6 +26,10 @@
                     <source>11</source>
                     <target>11</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
     </build>
