--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     testCompile 'org.springframework:spring-test:5.2.6.RELEASE'
     testCompile 'org.springframework.boot:spring-boot-test:2.2.7.RELEASE'
+    testCompile 'org.testcontainers:testcontainers:1.15.0'
 }
 
 group = 'org.example'
