Creates marsserver directory and project in anticipation of adding marsclient.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.7"
 
 services:
   mars-server:
+    build: './marsserver'
     image: abonneau/mars-server
     ports:
       - 8080:8080
